<resources>
    <string name="app_name">Voyager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_title">Placeholder title</string>
    <string name="rating">Placeholder rating</string>
    <string name="description">Placeholder description</string>
    <string name="picDesc">Picture of experience</string>
    <string name="facebook_app_id">607307741284475</string>
    <string name="fb_login_protocol_scheme">fb607307741284475</string>
    <string name="facebook_client_token">ca1d6960b1978080b2a64dbcfe97816a</string>
    <string name="att_by_list_label">Attractions By List</string>
    <string name="neighborhoods_label">Neighborhoods</string>
    <string name="itineraries_label">Itineraries</string>
    <string name="explore_label">Explore</string>
    <string name="sign_out_label">Sign Out</string>
    <string name="plan_your_trip_label">Plan Your Trip</string>
    <string name="add_new_itinerary">Add new itinerary</string>
    <string name="itinerary_name_text">Itinerary name</string>
    <string name="itinerary_description_text">Itinerary description</string>
    <string name="norrebro_label">Nørrebro</string>
    <string name="osterbro_label">Østerbro</string>
    <string name="osterbro_description">Welcome to Østerbro! A cozy and family-friendly neigbourhood located in the northeastern part of Copenhagen. Østerbro is the home of the little mermaid, and Fælledparken - the largest parks in the city. If you are looking for a place to stay that is both central and more on the quiet side, Østerbro is the place for you. Great shopping opportunities and green areas, and with the inner city just 10 minutes away on your bicycle! Scroll down to see some photos.</string>
    <string name="norrebro_description">Nørrebro is known to many as the hippest district in Copenhagen, and is located between Østerbro and Frederiksberg. Nørrebro is a cultural melting pot with restaurants from all corners of the world. It is generally less gentrified than other areas of Copenhagen, housing many independent and unique shops, cafés and restaurants. This area is recommended for both families, couples and solo travellers. Some famous places to see are the Assitant’s cemetery and Queen Louise’s bridge, which connects Nørrebro and Indre By.</string>
    <string name="route">Route</string>
    <string name="experience">Attractions</string>
    <string name="launch_voyager_trip_planner">Launch Voyager Trip Planner</string>
    <string name="itineray_name_text">%s</string>
    <string name="itinerary_view_description_text">%s</string>
    <string name="itinery_view_notes">%s</string>
    <string name="begin_route_button">Begin Route</string>
    <string name="close_button_text">Close</string>
    <string name="time_text">%s \n AM</string>
    <string name="experience_title_text">%s</string>
    <string name="address_text">%s</string>
    <string name="day_text">%s</string>
    <string name="view_itinerary_label">View Itinerary</string>
    <string name="romantic_label">Romantic</string>
    <string name="child_friendly_label">Child Friendly</string>
    <string name="popular_label">Popular</string>
    <string name="unique_label">Unique</string>
    <string name="local_label">Local</string>
    <string name="active_label">Active</string>
    <string name="culture_label">Culture</string>
    <string name="nature_label">Nature</string>
    <string name="historic_label">Historic</string>
    <string name="clear_label">Clear filtering</string>
</resources>