<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/actions">
        <item
            android:id="@+id/explore"
            android:title="@string/explore_label"/>

        <item
            android:id="@+id/itineraries"
            android:title="@string/itineraries_label" />

        <item
            android:id="@+id/neighborhoods"
            android:title="@string/neighborhoods_label" />

        <item
            android:id="@+id/att_by_list"
            android:title="@string/att_by_list_label" />
    </group>

    <group android:id="@+id/settings">
        <item
            android:id="@+id/sign_out"
            android:title="@string/sign_out_label" />
    </group>


</menu>

<!--<item
        android:id="@+id/explore"
        android:title="Explore"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/plan_your_trip"
        android:title="Plan Your trip"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/itineraries"
        android:title="Itineraries"
        app:showAsAction="always"
        />-->