<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/exploreFragment">

    <fragment
        android:id="@+id/exploreFragment"
        android:name="dk.itu.bachelor.voyager.fragments.ExploreFragment"
        android:label="@string/explore_label"
        tools:layout="@layout/fragment_explore">
    </fragment>

    <fragment
        android:id="@+id/planFragment"
        android:name="dk.itu.bachelor.voyager.fragments.PlanYourTripFragment"
        android:label="@string/plan_your_trip_label"
        tools:layout="@layout/fragment_plan_your_trip">
    </fragment>

    <fragment
        android:id="@+id/itinerariesFragment"
        android:name="dk.itu.bachelor.voyager.fragments.ItinerariesFragment"
        android:label="@string/itineraries_label"
        tools:layout="@layout/fragment_itineraries">
        <action
            android:id="@+id/show_plan_your_trip"
            app:destination="@id/planFragment" />
    </fragment>

</navigation>